Event loop loom carrier Adds support for running loom threads on the event loop.