@@ -17,6 +17,7 @@ tasks {
         systemProperty("io.netty.customResourceLeakDetector", "io.micronaut.http.server.netty.fuzzing.BufferLeakDetection")
         systemProperty("io.netty.leakDetection.targetRecords", "100")
         systemProperty("io.netty.allocator.type", "pooled") // todo: remove after https://github.com/netty/netty/pull/14946
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
         maxHeapSize = "1G"
     }
 }
